--- a/1-复习/1-C语言程序设计/m1-笔记.md
+++ b/1-复习/1-C语言程序设计/m1-笔记.md
@@ -1,3 +1,7 @@
+# 小括号
+
+小括号是中包含了多条语句时，其返回值是其中最后一条语句的返回值；
+
 # 冯诺依曼体系结构
 
 输入设备-->存储器-->输出设备
@@ -88,3 +92,22 @@ c 语言头文件共 29 个：`https://wiki.jikexueyuan.com/project/c/`中文网
 1. `n /= 10`代表在十进制下去掉一位，同理`n /= 2 `代表在 二进制下去掉一位
 2. 浮点数去掉多余的 0 `double n = 1.0;  printf("%g\n", n); `
 
+# 函数指针
+
+```c
+int g(int (*func1)(int), int (*func2)(int), int x);
+//其中 int (*func1)(int)既为函数指针
+```
+
+# 变参函数
+
+```c
+int max_int(int a, ...)
+```
+
+1. 获得 a 往后的参数列表：va_list 类型的变量；
+2. 定位 a 后面第一个参数位置（初始化参数列表）：va_start 函数；
+3. 获取下一个可变参数列表中的参数：va_arg 函数；
+4. 结束整个获取可变参数列表的动作：va_end 函数；
+
+详见代码`10-max_int.c`
