--- a/1-复习/1-C语言程序设计/m2-预处理命令.md
+++ b/1-复习/1-C语言程序设计/m2-预处理命令.md
@@ -2,9 +2,13 @@
 
 以`#`号开头的语句
 
+在预编译时将预处理命令展开，替换成相应的代码段
+
 # 宏定义类型名和`typedef`的区别
 
 宏定义只是简单的字符串替换，由预处理器来处理；而 typedef 是在编译阶段由编译器处理的，它并不是简单的字符串替换，而给原有的数据类型起一个新的名字，将它作为一种新的数据类型。
+
+（傻瓜表达式）
 
 例：
 
@@ -16,3 +20,43 @@ PINT1 a, b; // int * a, b; 其中 a 是指针变量而 b 是整形变量
 PINT2 c, d; // 其中 a , b 都是指针变量
 ```
 
+# 多行宏定义
+
+```c
+#define P(a) { \
+	printf("%d\n", a); \
+}
+
+// 用 ‘/’ 表示行链接 
+```
+
+# 预定义的宏
+
+```c
+/*
+	__DATE__   日期：Mmm dd yyyy
+	__TIME__   时间：hh:mm:ss
+	__LINE__   当前调用时的行号
+	__FILE__   当前文件名
+	__func__   函数名（非标准）
+	__FUNC__   函数名（非标准）
+	__PRETTY_FUNC__   详细函数信息（非标准）
+*/
+```
+
+# 条件式编译
+
+```c
+/*
+	#ifdef DEBUG    如果定义了 DEBUG 宏
+	#ifndef DEBUG	如果没定义 DEBUG 宏
+	#if MAX_N == 5	MAX_N 宏是否等于 5
+	#elif MAX_N == 4	否则 MAX_N 宏是否等于 4
+	#else
+	#endif
+*/
+```
+
+# #
+
+在`#define`语句块内部，`#func`代表将func转为字符串
