"c 语言测试框架"

--- a/1-复习/1-C语言程序设计/m4-字符串.md
+++ b/1-复习/1-C语言程序设计/m4-字符串.md
@@ -6,9 +6,11 @@ strcmp(str1, str2) //返回 ascall 差值
 strcpy(dest, src)
 strncmp(str1, str2, n) //n 位
 strncpy(dest, src, n)
+strdup(str) //通过 malloc 来复制一个字符串，返回 malloc 出来的储存了复制的字符串的指针
 memecpy(str1, str2, n) // 内存拷贝
 memcmp(str1, str2, n) //内存比较
 memset(*p(str), c, n) //内存设置, 
+
 某一个数组每个字节(整形4个字节)赋值 c，sizeof（str）
 sscanf(str1, format, ...)//从字符串读入
 sprintf(str1, format, ...)//输出到字符串
