--- a/1-复习/1-C语言程序设计/m1-笔记.md
+++ b/1-复习/1-C语言程序设计/m1-笔记.md
@@ -114,7 +114,7 @@ int max_int(int a, ...)
 
 # 待解决问题
 
-1. `""`和`<>`的区别
+1. `""`和`<>`的区别: `""` 代表从当前目录检索，`<>`代表从系统库检索，解决方法：`g++ -I./ xxxx`
 2. `const`
 3. `extern`
 
